@@ -1,6 +1,16 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-1.8.17 (05 Apr 2002)
+
+  05 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: no longer
+  print out the counter number after a merge.  This information should not
+  need to be known by end-users.
+  
+  05 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: sandbox.c: patched to
+  allow access to /dev/vc from sandbox, allowing vim and screen to compile
+  correctly from console.
+  
   05 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: fixed a bug
   that prevented md5 digests from being compared on archives.
   
